# internal/scheduler/scheduler.openapi.yml
@@ -284,7 +284,9 @@ components:
 paths:
   /v1/org/{org_id}:
     post:
+      tags: [Organization]
       summary: Create a new organization
+      operationId: createOrg
       parameters:
         - name: org_id
           in: path
@@ -304,7 +306,9 @@ paths:
           description: Bad request
 
     delete:
+      tags: [Organization]
       summary: Delete an organization
+      operationId: deleteOrg
       parameters:
         - name: org_id
           in: path
@@ -320,6 +324,8 @@ paths:
   /v1/user/{user_id}:
     post:
       summary: Create a new user
+      operationId: createUser
+      tags: [User]
       parameters:
         - name: user_id
           in: path
@@ -340,6 +346,8 @@ paths:
 
     get:
       summary: Get a user by ID
+      operationId: getUser
+      tags: [User]
       parameters:
         - name: user_id
           in: path
@@ -358,6 +366,8 @@ paths:
 
     patch:
       summary: Update a user
+      operationId: updateUser
+      tags: [User]
       parameters:
         - name: user_id
           in: path
@@ -378,6 +388,8 @@ paths:
 
     delete:
       summary: Delete a user
+      operationId: deleteUser
+      tags: [User]
       parameters:
         - name: user_id
           in: path
@@ -393,6 +405,8 @@ paths:
   /v1/user:
     get:
       summary: Get all users
+      operationId: listUsers
+      tags: [User]
       responses:
         '200':
           description: List of users
@@ -406,6 +420,8 @@ paths:
   /v1/user/{user_id}/availability:
     post:
       summary: Create availability for a user
+      operationId: createAvailability
+      tags: [Availability]
       parameters:
         - name: user_id
           in: path
@@ -426,6 +442,8 @@ paths:
 
     get:
       summary: Get availability for a user
+      operationId: getAvailability
+      tags: [Availability]
       parameters:
         - name: user_id
           in: path
@@ -444,6 +462,8 @@ paths:
 
     patch:
       summary: Update availability for a user
+      operationId: updateAvailability
+      tags: [Availability]
       parameters:
         - name: user_id
           in: path
@@ -465,6 +485,8 @@ paths:
   /v1/availability:
     get:
       summary: Get availability for multiple users (batch)
+      operationId: getBatchAvailability
+      tags: [Availability]
       requestBody:
         required: true
         content:
@@ -484,6 +506,8 @@ paths:
   /v1/course:
     post:
       summary: Create a new course
+      operationId: createCourse
+      tags: [Course]
       requestBody:
         required: true
         content:
@@ -498,6 +522,8 @@ paths:
 
     get:
       summary: Get all courses
+      operationId: listCourses
+      tags: [Course]
       responses:
         '200':
           description: List of courses
@@ -511,6 +537,8 @@ paths:
   /v1/course/{course_id}:
     post:
       summary: Update a course
+      operationId: updateCourse
+      tags: [Course]
       parameters:
         - name: course_id
           in: path
@@ -531,6 +559,8 @@ paths:
 
     get:
       summary: Get a course by ID
+      operationId: getCourse
+      tags: [Course]
       parameters:
         - name: course_id
           in: path
@@ -550,6 +580,8 @@ paths:
   /v1/class:
     post:
       summary: Create a new class
+      operationId: createClass
+      tags: [Class]
       requestBody:
         required: true
         content:
@@ -564,7 +596,9 @@ paths:
 
   /v1/class/user:
     get:
-      summary: Get classes for a user
+      summary: List classes for a user
+      operationId: listUserClasses
+      tags: [Class]
       requestBody:
         required: true
         content:
@@ -583,7 +617,9 @@ paths:
 
   /v1/class/course:
     get:
-      summary: Get classes for a course
+      summary: List classes for a course
+      operationId: listCourseClasses
+      tags: [Class]
       requestBody:
         required: true
         content:
@@ -603,6 +639,8 @@ paths:
   /v1/trackers/course:
     get:
       summary: Get trackers for a course
+      operationId: getTrackers
+      tags: [Tracker]
       requestBody:
         required: true
         content:
